--- a/Shortly_Frontend/src/Components/UrlShort/UrlShort.module.css
+++ b/Shortly_Frontend/src/Components/UrlShort/UrlShort.module.css
@@ -1,1 +1,5 @@
 @import '../../Styles/variables.css';
+
+.backgroundColor {
+    background-color: #eff1f7;
+}
